kibana/kibana-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: saif
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: saif
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  tls:
    - hosts:
        - kibana.test.com
  ingressClassName: contour
  rules:
  - host: kibana.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
